--- a/src/main/webapp/assets/css/home.css
+++ b/src/main/webapp/assets/css/home.css
@@ -16,7 +16,12 @@ header {
     align-items: center;
     padding: 12px 40px;
     color: white;
+
+    position: sticky;
+    top: 0;
+    z-index: 99999;
 }
+
 
 .logo {
     font-size: 22px;
